assets/css/main.scss
/* ... */
.hideSidebar #sidebar {
  cursor: w-resize;
}

@keyframes spinner {
  0% {
    transform: rotate(-180deg);
  }
  100% {
    transform: rotate(180deg);
  }
}

$cyclistSize: 8rem;
#videoPoster {
  width: 100%;
  height: 100%;

  &::after, &::before {
    transition-property: opacity;
    transition-duration: 0.5s;
    transition-timing-function: ease-in;
    opacity: 0;
    content: "";
    position: absolute;
  }

  &::before {
    background: url('/images/cyclist_outline.svg') 100% 100% / contain no-repeat;
    height: $cyclistSize;
    top:  calc(50% - $cyclistSize/2);
    left: calc(50% - $cyclistSize/2);
    width: $cyclistSize;
  }

  &::after {
    will-change: transform;
    animation: 2.0s ease-in-out infinite spinner;
    animation-play-state: paused;
    border: solid calc($cyclistSize/20) transparent;
    border-bottom-color: $red;
    border-radius: 50%;
    height: calc($cyclistSize/3.55);
    top: calc(50% - $cyclistSize/30.5);
    left: calc(50% - $cyclistSize/2.19);
    width: calc($cyclistSize/3.55);
  }

  &.loading {
    &::after, &::before {
      transition-delay: 1500ms;
      opacity: 1;
      animation-play-state: running;
    }
  }
}

video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

body.fullscreen video, #videoOuter:fullscreen video {
  object-fit: contain;
}

#switcher {
  $width: 41px;
  $height: 68px;

  position: absolute;
  position: sticky;
  top: calc(50vh - $height / 2);
  left: 0;
  height: 0;
  overflow: visible;
  touch-action: pan-x;

  cursor: pointer;

  div {
    background-image: url("/images/switcher2.svg");
    background-position: left center;
    background-repeat: no-repeat;
    background-size: 200% 100%;
    height: $height;
    margin-left: calc($width / -2);
    touch-action: pan-x;
    user-select: none;
    width: $width;
  }
}

.showSidebar #switcher div {
  background-position: right center;
}

$buttonSize: 1.8rem;
$buttonOffset: 0.25rem;
$buttonBorder: 2px;
#layerSwitcher {
  display: none;

  position: absolute;
  top: calc(50% - $buttonSize - $buttonOffset - $buttonBorder);
  left: $buttonOffset;
  z-index: 2;

  width: $buttonSize;
  height: $buttonSize;

  > button {
    background-image: url("/images/layers.svg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 70%;
    width: $buttonSize;
    height: $buttonSize;

    background-color: #fff;
    border-radius: 0.2rem;
    border: 0;
    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
  }

  > div {
    position: absolute;
    bottom: 0px;

    background: #fff;

    button {
      width: 100%;
      padding: 8px 8px 6px 4px;
      text-align: left;
      color: #000;

      &.layer + .style, &.style + .layer {
        border-top: 1px solid #999;
      }

      &::before {
        width: 20px;
        padding-right: 10px;
        text-align: right;
        content: "✓";
        color: transparent;
        line-height: 1.0rem;
        background-repeat: no-repeat;
        background-position: center center;
        background-size: 0.8rem;
      }
      &.active::before {
        background-image: url("/images/checkmark.svg");
        filter: brightness(0) saturate(100%);
      }

      &:hover {
        background: #f3f3f3;
      }
    }
  }
}


$headerSize: 2rem;
.header {
  color: #fff;
  line-height: calc(1.5*$headerSize);
  display: block;
  background: url("/images/home.svg") calc($headerSize/2) center / 0 no-repeat $darkBg;
  // visually centered by eyeballing it. The text is neither in the middle of
  // the full header, nor the remaining space besides the home icon.
  padding-left: $headerSize;
  text-align: center;
  font-weight: bold;
  font-size: $headerSize*0.7;
  text-decoration: none !important;
}

a.header {
  background-size: $headerSize;
}

$iconSize: 1.5em;
$iconBorder: 0.13em;
.icon {
  height: $iconSize;
  display: inline-block;
  line-height: calc($iconSize + $iconBorder);
  margin-top: -0.35em;
  margin-bottom: -0.15em;
  font-size: 90%;
  font-weight: normal;
  text-decoration: none;
  text-align: center;
  vertical-align: middle;
  border: $iconBorder solid white;

  &.freizeit {
    border-radius: 0.2rem;
    padding: 0 0.2rem;
  }

  &.alltag {
    border-radius: 50%;
    width: 1.5em;
  }

  &.bezirk {
    border-radius: 0% 0% 50% 50%;
    min-width: 1.5em;
    line-height: 1.25em;
  }

  &.rsw {
    display: none;
  }
}

h3 .icon {
  outline: 1px solid #eee;
  float: right;
  margin-top: -0.2rem;
  pointer-events: none;
  cursor: normal;
}

.icon, .fricon {
  font-weight: bold;
  color: #fff !important;
  cursor: default;
  border: $iconBorder solid white;
  text-shadow: -0.05em 0.05em 0 rgba(0, 0, 0, 0.4),
    0.05em 0.05em 0 rgba(0, 0, 0, 0.4), 0.05em -0.05em 0 rgba(0, 0, 0, 0.4),
    -0.05em -0.05em 0 rgba(0, 0, 0, 0.4);
}


a.icon, a.customicon {
  cursor: pointer;

  &:hover {
    text-decoration: none;
    opacity: 0.8;
  }
}

abbr {
  cursor: help;
  text-decoration: underline dotted;
}


h3,
h4 {
  margin-top: 1em;
}

h3 {
  font-size: 1.1rem;
}

h4 {
  font-size: 1.0rem;
}

h5 {
  margin-top: 0.5em;
  font-size: 0.9rem;
  font-weight: normal;
  font-style: italic;
}

h3:first-child + .duration {
  color: #888;
  font-style: italic;
  display: block;
  margin-top: 0.4em;
}

.artfooter {
  font-style: italic;
  text-align: right;
  color: #888;

  a {
    color: #888;
    font-style: italic;
  }
}

span.updated {
  color: #888;
  font-style: italic;
  display: block;
  padding-top: 0.1rem;
}

ul,
ol {
  padding-left: 0.85rem;
  margin-top: 0.6rem;

  li {
    margin-bottom: 0.4rem;
  }

  .duration {
    color: #888;
    float: right;
    padding-left: .5em;
  }
}
/* ... */

